fix: WCAG background contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -340,6 +340,7 @@
     padding-bottom: 0.5rem;
     margin: 0;
     color: #000000;
+    background-color: #fff;
     font-weight: 500;
     text-wrap: balance;
   }
